--- a/Tiger-Sugar.html
+++ b/Tiger-Sugar.html
@@ -12,223 +12,8 @@
     <!-- font-awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
-    <style>
-        /* banner css */
-        #banner .container {
-            position: relative;
-            width: 100vw;
-            height: 100vh;
-            background-color: #0C1219;
-            max-height: 924px;
-            overflow: hidden;
-        }
-
-        #banner .move-bg {
-            width: 100%;
-            height: 100%;
-            background-repeat: no-repeat;
-            transition: background-size .5s, background-position 0.5s;
-            transition-timing-function: cubic-bezier(.28, 1.13, .73, .83);
-            position: absolute;
-        }
-
-        #banner .bg-left-milk-shadow {
-            background-image: url(./images/scene_pc/bg-left-1.webp);
-            background-size: 95%;
-            background-position: -150% 0%;
-        }
-
-        #banner .bg-left-drinks {
-            background-image: url(./images/scene_pc/bg-left-2.webp);
-            background-size: 95%;
-            background-position: -150% 0%;
-        }
-
-        #banner .bg-left-milk {
-            background-image: url(./images/scene_pc/bg-left-3.webp);
-            background-size: 95%;
-            background-position: -150% 0%;
-        }
-
-        #banner .bg-left-tiger {
-            background-image: url(./images/scene_pc/bg-left-4.webp);
-            background-size: 95%;
-            background-position: -150% 0%;
-        }
-
-        #banner .bg-right-milk {
-            background-image: url(./images/scene_pc/bg-right-1.webp);
-            background-size: 95%;
-            background-position: 200% -30%;
-        }
-
-        #banner .bg-right-drinks {
-            background-image: url(./images/scene_pc/bg-right-2.webp);
-            background-size: 95%;
-            background-position: 200% 20%;
-        }
-
-        #banner .bg-center {
-            background-image: url(./images/scene_pc/bg-center.webp);
-            background-size: 85%;
-            background-position: 50% 50%;
-        }
-
-        #banner .bg-cover {
-            background-image: url(./images/scene_pc/bg-cover.webp);
-            background-size: 120%;
-            background-position: 50% -5%;
-        }
-
-        #banner .bg {
-            background-image: url(./images/scene_pc/bg.webp);
-            background-size: 120%;
-            background-position: 50% -5%;
-        }
-
-        #banner .trans-cover {
-            height: 100%;
-            width: 100%;
-            background-color: transparent;
-            position: absolute;
-        }
-
-        #banner .banner-text {
-            color: #f4dd97;
-            bottom: 10%;
-            left: 50%;
-            padding: 10px 15px;
-            /* font-size: 0.9rem; */
-            transform: translateX(-50%);
-            text-align: center;
-            position: absolute;
-            animation-name: shining;
-            animation-duration: 1.75s;
-            animation-iteration-count: infinite;
-        }
-
-        #banner .banner-text::before {
-            content: '';
-            border: 1px solid #f4dd97;
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: 5%;
-            left: 1%;
-        }
-
-        #banner .banner-text::after {
-            content: '';
-            border: 1px solid #f4dd97;
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: -5%;
-            left: -1%
-        }
-
-        @keyframes shining {
-            0% {
-                opacity: 0;
-            }
-
-            50% {
-                opacity: 1;
-            }
-
-            100% {
-                opacity: 0;
-            }
-        }
-
-
-        /* media css */
-        #media .container {
-            max-width: 1140px;
-            margin: auto;
-            width: 100vw;
-            background-color: #0C1219;
-        }
-
-        @media screen and (min-width: 576px) {
-            #media .container {
-                max-width: 540px;
-            }
-        }
-
-
-        @media screen and (min-width: 768px) {
-            #media .container {
-                max-width: 720px;
-            }
-        }
-
-
-        @media screen and (min-width: 992px) {
-            #media .container {
-                max-width: 960px;
-            }
-        }
-
-
-        @media screen and (min-width: 1200px) {
-            #media .container {
-                max-width: 1140px;
-            }
-        }
-
-        #media .title-text {
-            display: flex;
-            flex-direction: column;
-            font-size: 14px;
-            color: white;
-        }
-
-        #media .title-img {
-            background-image: url(./media-img/icon1-4.png);
-            height: 32px;
-            width: 32px;
-            margin: 0px 4px 0px 0px;
-            background-size: cover;
-        }
-
-        #media .title-flex {
-            display: flex;
-            width: 100%;
-            padding: 50px 0px;
-        }
-
-        #media .title-text-top {
-            font-size: 14px;
-            margin-top: 7px;
-        }
-
-        #media .title-text-bottom {
-            font-size: 12px;
-            margin-bottom: 8px;
-        }
-
-        #media .video {
-            width: 100%;
-        }
-
-        #media .volumn {
-            font-size: 36px;
-            color: white;
-            position: absolute;
-            top: 5%;
-            right: 2%;
-        }
-
-        #media .swiper-button-next,
-        #media .swiper-button-prev {
-            --swiper-theme-color: white;
-        }
-
-        #media .swiper-slide {
-            position: relative;
-        }
-    </style>
+    <link rel="stylesheet" href="./css/banner.css">
+    <link rel="stylesheet" href="./css/media.css">
 </head>
 
 <body>
@@ -327,94 +112,11 @@
     <footer></footer>
 
 
-    <script>
-        let bg = document.querySelector('.bg');
-        let bgCenter = document.querySelector('.bg-center');
-        let bgCover = document.querySelector('.bg-cover');
-        let bgLeftMilkShadow = document.querySelector('.bg-left-milk-shadow');
-        let bgLeftDrinks = document.querySelector('.bg-left-drinks');
-        let bgLeftMilk = document.querySelector('.bg-left-milk');
-        let bgLeftTiger = document.querySelector('.bg-left-tiger');
-        let bgRightMilk = document.querySelector('.bg-right-milk');
-        let bgRightDrinks = document.querySelector('.bg-right-drinks');
-
-        const coverPos = document.querySelector('.trans-cover');
-        coverPos.addEventListener('mousemove', shadow);
-
-        function shadow(e) {
-            const { offsetWidth: width, offsetHeight: height } = coverPos;
-            let { offsetX: x, offsetY: y } = e;
-
-            // 考慮進-50，滑鼠在畫面中心時增長值即為0
-            const xMove = Math.floor(((x / width) * 100) - 50);
-            const yMove = Math.floor(((y / height) * 100) - 50);
-
-            // 縮放的部分，若比例上超過100%，則搖擺方向會與滑鼠方向相反
-            // 若比例上小於100%，則搖擺方向會與滑鼠方向相同
-            //第3小
-            bg.style.backgroundPosition = `${50 + (xMove / 4)}% ${-5 + (yMove / 6)}%`;
-
-            //第2小
-            bgCenter.style.backgroundPosition = `${50 - (xMove / 6)}% ${50 + (yMove / 8)}%`;
-
-            //最小
-            bgCover.style.backgroundPosition = `${50 + (xMove / 10)}% ${-5 + (yMove / 10)}%`;
-
-            //第3大
-            bgLeftMilkShadow.style.backgroundPosition = `${-150 - (xMove * 1)}% ${0 + (yMove / 2)}%`;
-
-            //第3大
-            bgLeftDrinks.style.backgroundPosition = `${-150 - (xMove * 1)}% ${0 + (yMove / 2)}%`;
-
-            //第2大
-            bgLeftMilk.style.backgroundPosition = `${-150 - (xMove * 1.2)}% ${0 + (yMove / 1.5)}%`;
-
-            //最大
-            bgLeftTiger.style.backgroundPosition = `${-150 - (xMove * 4.2)}% ${0 + (yMove * 1)}%`;
-
-            //第3大
-            bgRightMilk.style.backgroundPosition = `${200 - (xMove * 1)}% ${-30 + (yMove / 2)}%`;
-
-            //第2大
-            bgRightDrinks.style.backgroundPosition = `${200 - (xMove * 1.2)}% ${20 + (yMove / 1.5)}%`;
-        }
-    </script>
-
     <!-- Swiper Js -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 
-    <script>
-        var mediaSwiper = new Swiper(".media-swiper", {
-            navigation: {
-                nextEl: ".media-button-next",
-                prevEl: ".media-button-prev",
-            },
-        });
-    </script>
-
-    <script>
-        let toggleButtons = document.querySelectorAll('.volumn');
-
-        toggleButtons.forEach(element => {
-            element.addEventListener('click', function () {
-                let targetVideo = element.previousElementSibling;
-
-                // 開啟
-                if (targetVideo.muted) {
-                    targetVideo.muted = false;
-                    element.classList.remove("fa-volume-xmark");
-                    element.classList.add("fa-volume-high");
-
-                }
-                // 靜音
-                else {
-                    targetVideo.muted = true;
-                    element.classList.remove("fa-volume-high");
-                    element.classList.add("fa-volume-xmark");
-                }
-            })
-        });
-    </script>
+    <script src="./js/banner.js"></script>
+    <script src="./js/media.js"></script>
 </body>
 
 </html>
