--- a/Tiger-Sugar.html
+++ b/Tiger-Sugar.html
@@ -7,336 +7,9 @@
     <title>Document</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <style>
-        * {
-            box-sizing: border-box;
-        }
+    <link rel="stylesheet" href="./about.css">
+    <link rel="stylesheet" href="./franchisee.css">
 
-        .v100 {
-            height: 100vh;
-            width: 100vw;
-            background-color: blanchedalmond;
-        }
-
-        /* CSS about */
-
-        #about {
-            /* height: 100vh; */
-            width: 100vw;
-            padding-bottom: 120px;
-            background-color: blanchedalmond;
-            background-image: url("images/background_img/about_bg.webp");
-            background-size: cover;
-            position: relative;
-            background-position: center;
-            background-repeat: no-repeat;
-            overflow: hidden;
-        }
-
-        .black-sugar {
-            /* width: 100%; */
-            aspect-ratio: 23 / 4;
-            background-image: url("./images/background_img/section_header.webp");
-            background-color: transparent;
-            background-size: contain;
-            background-repeat: no-repeat;
-            z-index: 1;
-        }
-
-
-
-        .container-about-us-title {
-            display: flex;
-            padding-left: 10%;
-            position: absolute;
-            top: 5%;
-        }
-
-        .about-us-icon {
-            background-image: url("./images/nav/icon1-1.png");
-            background-size: contain;
-            width: 32px;
-            height: 32px;
-            float: left;
-            margin-right: 6px;
-        }
-
-        .about-us-tilte {
-            color: white;
-            float: left;
-        }
-
-        .about-us-tilte h1,
-        h2 {
-            font-size: 14px;
-            font-weight: 500;
-        }
-
-        .about-us-tilte h1 {
-            margin-bottom: 0;
-        }
-
-        .about-us-tilte h2 {
-            margin-top: 0px;
-            margin-bottom: 8px;
-        }
-
-        .about-card-group-container {
-            margin: 80px auto 0;
-            z-index: 3;
-        }
-
-        .about-card-group-text-animation-top {
-            display: flex;
-            flex-direction: row;
-            margin-bottom: 60px;
-            padding-left: 10%;
-        }
-
-        .about-card-group-text-animation-botton {
-            display: flex;
-            flex-direction: row;
-            margin-bottom: 60px;
-            padding-left: 10%;
-        }
-
-        .about-card-group-img {
-            width: 106px;
-        }
-
-        .about-card-group-text {
-            color: white;
-            margin-left: 30px;
-        }
-
-        .about-card-group-text h2 {
-            font-size: 20px;
-        }
-
-        .cloud-left {
-            width: 100%;
-            position: absolute;
-            left: -100%;
-            top: 0;
-            z-index: 2;
-        }
-
-        .cloud-right {
-            width: 100%;
-            position: absolute;
-            top: 0;
-            right: -100%;
-            z-index: 2;
-        }
-
-        [data-aos=fade-left] {
-            transform: translate3d(100%, 0, 0);
-        }
-
-        [data-aos=fade-right] {
-            transform: translate3d(-90%, 0, 0);
-        }
-
-        [data-aos=fade-down] {
-            transform: translate3d(0, -250px, 0);
-        }
-
-        [data-aos^=fade][data-aos^=fade] {
-            opacity: 1;
-        }
-
-        .about-us-scroll-img {
-            width: 30vw;
-            position: absolute;
-            right: 3%;
-            top: 5%;
-        }
-
-        @media screen and(max-width:1200px) {
-            .cloud-right {
-                display: none;
-            }
-
-            .cloud-left {
-                display: none;
-            }
-        }
-
-        @media screen and(min-width:1200px) {
-            #about .container {
-                max-width: 1140px;
-            }
-        }
-
-        @media screen and(min-width:992px) {
-            #about .container {
-                max-width: 960px;
-            }
-        }
-
-        @media screen and(min-width:768px) {
-            #about .container {
-                max-width: 720px;
-            }
-        }
-
-        @media screen and(min-width:576px) {
-            #about .container {
-                max-width: 540px;
-            }
-        }
-
-
-
-
-        /* CSS franchisee */
-
-        #franchisee {
-            width: 100vw;
-            height: 400px;
-            padding: 50px 0 40px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            background-image: url(./images/background_img/about_bg.png);
-            background-repeat: no-repeat;
-            background-size: cover;
-            position: relative;
-        }
-
-        .franchisee-container-big {
-            height: 100px;
-            width: 100%;
-            padding: 20% 15px 0;
-            margin: auto;
-        }
-
-        .franchisee-container-animation {
-            display: flex;
-            justify-content: center;
-        }
-
-        .join-us-img {
-            width: 400px;
-            height: 100px;
-            background-image: url(./images/franchisee/logo-Graphic.png);
-            background-repeat: no-repeat;
-            background-size: contain;
-        }
-
-        .join-us-img img {
-            width: 100px;
-            height: 100px;
-        }
-
-        .join-us-info {
-            display: flex;
-            flex-direction: row;
-            background-image: url(./images/franchisee/logo-Text.png);
-            width: 250px;
-            height: 60px;
-            background-repeat: no-repeat;
-            background-size: contain;
-            margin-left: 130px;
-            margin-top: 5px;
-        }
-
-        @keyframes flashing {
-            0% {
-                color: #fee483;
-            }
-
-            50% {
-                color: white;
-            }
-
-            100% {
-                color: #fee483;
-            }
-        }
-
-        .join-us-info h2 {
-            margin-top: 75px;
-            font-size: 18px;
-            letter-spacing: 2px;
-            text-align: center;
-            color: #fee483;
-            font-weight: 400;
-            -webkit-animation: flashing 1.5s infinite;
-            animation: flashing 1.5s infinite;
-        }
-
-        .container-franchisee-title {
-            width: 100%;
-            z-index: 3;
-        }
-
-        .franchisee-icon {
-            background-image: url("./images/nav/icon1-5.png");
-            background-size: contain;
-            background-repeat: no-repeat;
-            width: 32px;
-            height: 32px;
-            float: left;
-            margin-right: 6px;
-            float: left;
-        }
-
-        .franchisee-title {
-            width: 150px;
-            height: 50px;
-            color: white;
-            position: absolute;
-            left: 10%;
-            top: 50px;
-            display: flex;
-            flex-direction: row;
-        }
-
-        .franchisee-title h1,
-        h2 {
-            font-size: 14px;
-            font-weight: 500;
-        }
-
-        .franchisee-title h1 {
-            margin: 0;
-        }
-
-        .franchisee-title h2 {
-            margin-top: 0px;
-            margin-bottom: 8px;
-        }
-
-        .franchisee-link {
-            text-decoration: none;
-        }
-
-        @media screen and(min-width:1200px) {
-            #franchisee .container {
-                max-width: 1140px;
-            }
-        }
-
-        @media screen and(min-width:992px) {
-            #franchisee .container {
-                max-width: 960px;
-            }
-        }
-
-        @media screen and(min-width:768px) {
-            #franchisee .container {
-                max-width: 720px;
-            }
-        }
-
-        @media screen and(min-width:576px) {
-            #franchisee .container {
-                max-width: 540px;
-            }
-        }
-    </style>
-</head>
 
 <body>
 
@@ -351,11 +24,12 @@
         <div class="v100"></div>
         <!-- 齊 關於我們 -->
         <section id="about">
-            <div class="container">
-                <div class="container-about-us-header">
-                    <div class="black-sugar" data-aos="fade-down" data-aos-duration="2000" data-aos-once="true"
+            <div class="black-sugar" data-aos="fade-down" data-aos-duration="2000" data-aos-once="true"
                         data-aos-delay="1000">
                     </div>
+            <div class="container">
+                <div class="container-about-us-header">
+                    
                     <div class="container-about-us-title">
                         <div class="about-us-icon"></div>
                         <div class="about-us-tilte">
@@ -461,54 +135,12 @@
 
     </main>
 
-
     <!-- 秋 footer -->
     <footer></footer>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
-
-    <script>
-        AOS.init({
-            duration: 800,
-        });
-        // let animationPlayed = false;
-
-        // function blackSugarDelay(number) {
-        //     document.querySelector('.black-sugar').setAttribute('data-aos-duration', 800)
-        // }
-        // setTimeout(blackSugarDelay, 3000);
-
-
-
-
-        const scrollImg = document.querySelector(".about-us-scroll-img");
-        const aboutSection = document.querySelector("#about");
-
-        let scrollPosition = 0;
-        const sectionHeight = aboutSection.clientHeight;
-        const minScrollPosition = -sectionHeight * 0.1; // 控制上
-        const maxScrollPosition = sectionHeight * 0.52; // 控制下限
-        const scrollSpeed = 0.5;
-
-        document.addEventListener("wheel", (event) => {
-            const deltaY = event.deltaY * scrollSpeed;
-            scrollPosition += deltaY;
-            console.log(minScrollPosition);
-            console.log(maxScrollPosition);
-            if (scrollPosition < minScrollPosition) {
-                scrollPosition = minScrollPosition;
-            }
-            if (scrollPosition > maxScrollPosition) {
-                scrollPosition = maxScrollPosition;
-            }
-            console.log(scrollPosition);
-            scrollImg.style.transform = `translateY(${scrollPosition}px)`;
-            event.preventDefault();
-        });
-
-
-    </script>
+    <script src="./about.js"></script>
 </body>
 
 </html>
