第二部分小調整

--- a/Tiger-Sugar.html
+++ b/Tiger-Sugar.html
@@ -39,7 +39,7 @@
             </div>
             <div class="container">
                 <!-- Swiper -->
-                <div #swiperRef="" class="swiper mySwiper">
+                <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide"><iframe class="card-body"
                                 src="https://www.instagram.com/p/Cq9ZWd9hUSw/embed/?cr=1&amp;v=14&amp;wp=696&amp;rd=https%3A%2F%2Ftigersugar.com&amp;rp=%2F#%7B%22ci%22%3A0%2C%22os%22%3A715.5%2C%22ls%22%3A418.89999997615814%2C%22le%22%3A430%7D"
@@ -74,7 +74,6 @@
                                 allowtransparency="true" allowfullscreen="true" frameborder="0" height="643"
                                 data-instgrm-payload-id="instagram-media-payload-7" scrolling="no"></iframe></div>
                     </div>
-
                 </div>
             </div>
             <div class="swiper-button">
@@ -99,7 +98,7 @@
                 </div>
                 <!-- Swiper -->
                 <div class="container">
-                    <div #swiperRef="" class="swiper mySwiper2">
+                    <div class="swiper mySwiper2">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide d-f-direction-c">
                                 <div class="img-w-h-border-img">
@@ -271,7 +270,7 @@
 
             <!-- Swiper -->
             <div class="content">
-                <div #swiperRef="" class="swiper mySwiper3">
+                <div class="swiper mySwiper3">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <a target="_blank" href="https://www.popdaily.com.tw/food/962274">
