--- a/Tiger-Sugar.html
+++ b/Tiger-Sugar.html
@@ -97,7 +97,7 @@
                     </div>
                 </div>
                 <!-- Swiper -->
-                <div class="container">
+                <div class="card-container">
                     <div class="swiper mySwiper2">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide d-f-direction-c">
