--- a/Tiger-Sugar.html
+++ b/Tiger-Sugar.html
@@ -20,7 +20,7 @@
 
     <link rel="stylesheet" href="./css/banner.css">
 
-    <link rel="stylesheet" href="./about.css">
+    <link rel="stylesheet" href="./css/about.css">
 
     <link rel="stylesheet" href="./css/social.css">
 
@@ -30,7 +30,7 @@
 
     <link rel="stylesheet" href="./css/news.css">
 
-    <link rel="stylesheet" href="./franchisee.css">
+    <link rel="stylesheet" href="./css/franchisee.css">
 
     <link rel="stylesheet" href="./css/media.css">
 </head>
