調整js檔案位置+爆版元素排除

--- a/Tiger-Sugar.html
+++ b/Tiger-Sugar.html
@@ -1153,7 +1153,7 @@
     <script src="./js/swiperJS.js"></script>
     <script src="./js/banner.js"></script>
     <script src="./js/media.js"></script>
-    <script src="./about.js"></script>
+    <script src="./js/about.js"></script>
 </body>
 
 </html>
