--- a/Tiger-Sugar.html
+++ b/Tiger-Sugar.html
@@ -18,6 +18,8 @@
     <!-- aos css -->
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
 
+    <link rel="stylesheet" href="./css/common.css">
+
     <link rel="stylesheet" href="./css/banner.css">
 
     <link rel="stylesheet" href="./css/about.css">
