kevin-lil-update

--- a/Tiger-Sugar.html
+++ b/Tiger-Sugar.html
@@ -386,8 +386,8 @@
                                     <div class="up text20">
                                         <h4 class="color-white">全球首創虎紋系列</h4>
                                     </div>
-                                    <div class="gold-border">
-                                        <ul class="ul-group">
+                                    <div class="ul-group">
+                                        <ul class="gold-border">
                                             <li>
                                                 <div class="df mgt40 justbet justbet">
                                                     <div class="text14 color-white">虎虎生風厚鮮奶｜含奶霜 (波霸+珍珠)</div>
@@ -715,7 +715,7 @@
                                 <div class="menu-type">
                                     <div class="up text20">
                                         <h4 class="color-white">黑糖波霸咖啡系列</h4>
-                                        <h4 class="text14 mgt10 color-white">採用阿拉比卡咖啡豆</h4>
+                                        <h4 class="text14 mgt10 color-white mgt10">採用阿拉比卡咖啡豆</h4>
                                     </div>
                                     <div class="down">
                                         <ul class="gold-border">
@@ -822,7 +822,7 @@
                         <div class="content">
                             <div data-aos="fade-up" class="menu-bottom row mt-5 justify-content-center">
                                 <div class="step-2">
-                                    <p class="color-white">Step2 | 上下均勻搖晃15下(不多不少15下，這步驟很重要喔!)</p>
+                                    <p class="color-white text14-4">Step2 | 上下均勻搖晃15下(不多不少15下，這步驟很重要喔!)</p>
                                 </div>
                             </div>
 
