--- a/Tiger-Sugar.html
+++ b/Tiger-Sugar.html
@@ -11,7 +11,7 @@
 
     <!-- swiper css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
-    
+
     <!-- bootstrap-icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
@@ -62,11 +62,11 @@
         <!-- 齊 關於我們 -->
         <section id="about">
             <div class="black-sugar" data-aos="fade-down" data-aos-duration="2000" data-aos-once="true"
-                        data-aos-delay="1000">
-                    </div>
+                data-aos-delay="1000">
+            </div>
             <div class="container">
                 <div class="container-about-us-header">
-                    
+
                     <div class="container-about-us-title">
                         <div class="about-us-icon"></div>
                         <div class="about-us-tilte">
@@ -198,136 +198,154 @@
                 <div class="card-container">
                     <div class="swiper mySwiper2">
                         <div class="swiper-wrapper">
-                            <div class="swiper-slide d-f-direction-c">
-                                <div class="img-w-h-border-img">
-                                    <img class="product-img"
-                                        src="./images/product/1668998205a2557a7b2e94197ff767970b67041697.jpg" alt="">
-                                    <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
-                                    <div class="product_img_hover">
-                                        <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="">
-                                        <a href="" class="commodity_more_button btn">
-                                            MORE
-                                        </a>
+                            <div class="swiper-slide">
+                                <div class="direction-body">
+                                    <div class="img-w-h-border-img">
+                                        <img class="product-img"
+                                            src="./images/product/1668998205a2557a7b2e94197ff767970b67041697.jpg"
+                                            alt="">
+                                        <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
+                                        <div class="product-img-hover">
+                                            <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="">
+                                            <a href="" class="commodity-more-button btn">
+                                                MORE
+                                            </a>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="commodity_title">
-                                    老虎堂地瓜條
-                                </div>
-                                <div class="commodity_title_english">
-                                    Tiger Sugar Sweet Potato Fries
-                                </div>
-                                <div class="commodity_sort">
-                                    零食｜Snack
+                                    <div class="commodity-title">
+                                        老虎堂地瓜條
+                                    </div>
+                                    <div class="commodity-title-english">
+                                        Tiger Sugar Sweet Potato Fries
+                                    </div>
+                                    <div class="commodity-sort">
+                                        零食｜Snack
+                                    </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide d-f-direction-c">
-                                <div class="img-w-h-border-img">
-                                    <img class="product-img"
-                                        src="./images/product/165899031442a0e188f5033bc65bf8d78622277c4e.jpg" alt="">
-                                    <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
-                                    <div class="product_img_hover">
-                                        <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="">
-                                        <a href="" class="commodity_more_button btn">
-                                            MORE
-                                        </a>
+                            <div class="swiper-slide">
+                                <div class="direction-body">
+                                    <div class="img-w-h-border-img">
+                                        <img class="product-img"
+                                            src="./images/product/165899031442a0e188f5033bc65bf8d78622277c4e.jpg"
+                                            alt="">
+                                        <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
+                                        <div class="product-img-hover">
+                                            <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="">
+                                            <a href="" class="commodity-more-button btn">
+                                                MORE
+                                            </a>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="commodity_title">
-                                    經典黑糖麻糬包
-                                </div>
-                                <div class="commodity_title_english">
-                                    Black Sugar Mochi Bun
-                                </div>
-                                <div class="commodity_sort">
-                                    食品｜Food
+                                    <div class="commodity-title">
+                                        經典黑糖麻糬包
+                                    </div>
+                                    <div class="commodity-title-english">
+                                        Black Sugar Mochi Bun
+                                    </div>
+                                    <div class="commodity-sort">
+                                        食品｜Food
+                                    </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide d-f-direction-c">
-                                <div class="img-w-h-border-img">
-                                    <img class="product-img"
-                                        src="./images/product/165899100742a0e188f5033bc65bf8d78622277c4e.jpg" alt="">
-                                    <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
-                                    <div class="product_img_hover">
-                                        <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="">
-                                        <a href="" class="commodity_more_button btn">
-                                            MORE
-                                        </a>
+                            <div class="swiper-slide">
+                                <div class="direction-body">
+                                    <div class="img-w-h-border-img">
+                                        <img class="product-img"
+                                            src="./images/product/165899100742a0e188f5033bc65bf8d78622277c4e.jpg"
+                                            alt="">
+                                        <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
+                                        <div class="product-img-hover">
+                                            <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="">
+                                            <a href="" class="commodity-more-button btn">
+                                                MORE
+                                            </a>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="commodity_title">
-                                    爆漿起司流心包
-                                </div>
-                                <div class="commodity_title_english">
-                                    Bursting Cheese Filling Bun
-                                </div>
-                                <div class="commodity_sort">
-                                    食品｜Food
+                                    <div class="commodity-title">
+                                        爆漿起司流心包
+                                    </div>
+                                    <div class="commodity-title-english">
+                                        Bursting Cheese Filling Bun
+                                    </div>
+                                    <div class="commodity-sort">
+                                        食品｜Food
+                                    </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide d-f-direction-c">
-                                <div class="img-w-h-border-img">
-                                    <img class="product-img"
-                                        src="./images/product/1658908734cfecdb276f634854f3ef915e2e980c31.jpg" alt="">
-                                    <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
-                                    <div class="product_img_hover">
-                                        <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="">
-                                        <a href="" class="commodity_more_button btn">
-                                            MORE
-                                        </a>
+                            <div class="swiper-slide">
+                                <div class="direction-body">
+                                    <div class="img-w-h-border-img">
+                                        <img class="product-img"
+                                            src="./images/product/1658908734cfecdb276f634854f3ef915e2e980c31.jpg"
+                                            alt="">
+                                        <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
+                                        <div class="product-img-hover">
+                                            <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="">
+                                            <a href="" class="commodity-more-button btn">
+                                                MORE
+                                            </a>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="commodity_title">
-                                    黑糖奶霜樹幹年輪
-                                </div>
-                                <div class="commodity_title_english">
-                                    Black Suga Cream Trunk Baumkuchen
-                                </div>
-                                <div class="commodity_sort">
-                                    甜點｜dessert
+                                    <div class="commodity-title">
+                                        黑糖奶霜樹幹年輪
+                                    </div>
+                                    <div class="commodity-title-english">
+                                        Black Suga Cream Trunk Baumkuchen
+                                    </div>
+                                    <div class="commodity-sort">
+                                        甜點｜dessert
+                                    </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide d-f-direction-c">
-                                <div class="img-w-h-border-img">
-                                    <img class="product-img"
-                                        src="./images/product/16589912415878a7ab84fb43402106c575658472fa.jpg" alt="">
-                                    <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
-                                    <div class="product_img_hover">
-                                        <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="">
-                                        <a href="" class="commodity_more_button btn">
-                                            MORE
-                                        </a>
+                            <div class="swiper-slide">
+                                <div class="direction-body">
+                                    <div class="img-w-h-border-img">
+                                        <img class="product-img"
+                                            src="./images/product/16589912415878a7ab84fb43402106c575658472fa.jpg"
+                                            alt="">
+                                        <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
+                                        <div class="product-img-hover">
+                                            <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="">
+                                            <a href="" class="commodity-more-button btn">
+                                                MORE
+                                            </a>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="commodity_title">
-                                    特濃黑糖厚奶蓋蛋糕
-                                </div>
-                                <div class="commodity_title_english">
-                                    Black Sugar Cheese Foam Cake
-                                </div>
-                                <div class="commodity_sort">
-                                    甜點｜dessert
+                                    <div class="commodity-title">
+                                        特濃黑糖厚奶蓋蛋糕
+                                    </div>
+                                    <div class="commodity-title-english">
+                                        Black Sugar Cheese Foam Cake
+                                    </div>
+                                    <div class="commodity-sort">
+                                        甜點｜dessert
+                                    </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide d-f-direction-c">
-                                <div class="img-w-h-border-img">
-                                    <img class="product-img"
-                                        src="./images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg" alt="">
-                                    <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
-                                    <div class="product_img_hover">
-                                        <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="">
-                                        <a href="" class="commodity_more_button btn">
-                                            MORE
-                                        </a>
+                            <div class="swiper-slide">
+                                <div class="direction-body">
+                                    <div class="img-w-h-border-img">
+                                        <img class="product-img"
+                                            src="./images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg"
+                                            alt="">
+                                        <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
+                                        <div class="product-img-hover">
+                                            <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="">
+                                            <a href="" class="commodity-more-button btn">
+                                                MORE
+                                            </a>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="commodity_title">
-                                    老虎芝士流心雪糕
-                                </div>
-                                <div class="commodity_title_english">
-                                    Tiger Cheese Filling Black Sugar Ice Cream Bar
-                                </div>
-                                <div class="commodity_sort">
-                                    冰品｜Ice
+                                    <div class="commodity-title">
+                                        老虎芝士流心雪糕
+                                    </div>
+                                    <div class="commodity-title-english">
+                                        Tiger Cheese Filling Black Sugar Ice Cream Bar
+                                    </div>
+                                    <div class="commodity-sort">
+                                        冰品｜Ice
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -340,7 +358,7 @@
                             <img class="next-prev-img" src="./img/commodity-prev.svg" alt="">
                         </div>
                     </div>
-                    <a href="" class="distribution_area_button ">更多商品</a>
+                    <a href="" class="distribution-area-button ">更多商品</a>
                 </div>
             </div>
             </div>
