--- a/Tiger-Sugar.html
+++ b/Tiger-Sugar.html
@@ -11,7 +11,7 @@
 
     <!-- swiper css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
-    
+
     <!-- bootstrap-icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
@@ -62,11 +62,11 @@
         <!-- 齊 關於我們 -->
         <section id="about">
             <div class="black-sugar" data-aos="fade-down" data-aos-duration="2000" data-aos-once="true"
-                        data-aos-delay="1000">
-                    </div>
+                data-aos-delay="1000">
+            </div>
             <div class="container">
                 <div class="container-about-us-header">
-                    
+
                     <div class="container-about-us-title">
                         <div class="about-us-icon"></div>
                         <div class="about-us-tilte">
@@ -389,7 +389,7 @@
                                     <div class="ul-group">
                                         <ul class="gold-border">
                                             <li>
-                                                <div class="df mgt40 justbet justbet">
+                                                <div class="df mgt40 justbet">
                                                     <div class="text14 color-white">虎虎生風厚鮮奶｜含奶霜 (波霸+珍珠)</div>
                                                     <div class="df mgt40 justbet small-dot">
                                                         <div class="cold"></div>
@@ -456,8 +456,10 @@
                             </div>
                             <div data-aos="fade-up" data-aos-delay="300">
                                 <div class="menu-type">
-                                    <div class="up text20">
-                                        <h4 class="color-white">日式麻糬波波系列</h4>
+                                    <div class="title-gap">
+                                        <div class="up text20">
+                                            <h4 class="color-white">日式麻糬波波系列</h4>
+                                        </div>
                                     </div>
                                     <div class="down">
                                         <ul class="gold-border">
