--- a/Tiger-Sugar.html
+++ b/Tiger-Sugar.html
@@ -61,12 +61,8 @@
 
         <!-- 齊 關於我們 -->
         <section id="about">
-            <div class="black-sugar" data-aos="fade-down" data-aos-duration="2000" data-aos-once="true"
-                data-aos-delay="1000">
-            </div>
-            <div class="container">
-                <div class="container-about-us-header">
-
+            <div class="about-header">
+                <div class="title-position">
                     <div class="container-about-us-title">
                         <div class="about-us-icon"></div>
                         <div class="about-us-tilte">
@@ -74,6 +70,15 @@
                             <h2>ABOUT</h2>
                         </div>
                     </div>
+                </div>
+                <div class="black-sugar" data-aos="fade-down" data-aos-duration="2000" data-aos-once="true"
+                    data-aos-delay="1000">
+                </div>
+            </div>
+            <div class="container">
+                <div class="container-about-us-header">
+
+
                 </div>
 
                 <div class="about-card-group-container">
@@ -1150,6 +1155,20 @@
                         </a>
                     </div>
                 </div>
+
+                <div class="franchisee-container-animation" data-aos="zoom-in">
+                    <a href="" class="franchisee-link">
+                        <div class="join-us-img">
+                            <div class="join-us-info">
+                                <h2> <i class="bi bi-star-fill"></i>Join Our Franchise!
+                                    <i class="bi bi-star-fill"></i>
+                                </h2>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+
             </div>
         </section>
     </main>
