--- a/Tiger-Sugar.html
+++ b/Tiger-Sugar.html
@@ -63,25 +63,29 @@
         <!-- 齊 關於我們 -->
         <section id="about">
             <div class="about-header">
-                <div class="title-position">
-                    <div class="container-about-us-title">
-                        <div class="about-us-icon"></div>
-                        <div class="about-us-tilte">
-                            <h1>關於我們</h1>
-                            <h2>ABOUT</h2>
-                        </div>
+
+                <!-- <div class="container-about-us-title">
+                    <div class="about-us-icon"></div>
+                    <div class="about-us-tilte">
+                        <h1>關於我們</h1>
+                        <h2>ABOUT</h2>
                     </div>
-                </div>
+                </div> -->
+
                 <div class="black-sugar" data-aos="fade-down" data-aos-duration="2000" data-aos-once="true"
                     data-aos-delay="1000">
                 </div>
             </div>
             <div class="container">
-                <div class="container-about-us-header">
-
-
+                <div class="container-about-us-title">
+                    <div class="about-us-icon"></div>
+                    <div class="about-us-tilte">
+                        <h1>關於我們</h1>
+                        <h2>ABOUT</h2>
+                    </div>
                 </div>
-
+                <div class="container-about-us-header">
+                </div>
                 <div class="about-card-group-container">
                     <div class="about-card-group-text-animation-top" data-aos="fade-up"
                         data-aos-anchor-placement="center-bottom" data-aos-duration="800">
