--- a/Tiger-Sugar.html
+++ b/Tiger-Sugar.html
@@ -63,17 +63,8 @@
         <!-- 齊 關於我們 -->
         <section id="about">
             <div class="about-header">
-
-                <!-- <div class="container-about-us-title">
-                    <div class="about-us-icon"></div>
-                    <div class="about-us-tilte">
-                        <h1>關於我們</h1>
-                        <h2>ABOUT</h2>
-                    </div>
-                </div> -->
-
                 <div class="black-sugar" data-aos="fade-down" data-aos-duration="2000" data-aos-once="true"
-                    data-aos-delay="1000">
+                    data-aos-delay="1000" data-aos-offset="600">
                 </div>
             </div>
             <div class="container">
@@ -103,7 +94,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="about-card-group-text-animation-botton" data-aos="fade-up"
+                    <div class="about-card-group-text-animation-bottom" data-aos="fade-up"
                         data-aos-anchor-placement="center-bottom" data-aos-duration="800">
                         <div class="about-card-group-img">
                             <img src="./images/about/icon5.png">
@@ -121,18 +112,18 @@
                         </div>
                     </div>
                 </div>
-                <div class="cloud-left" data-aos="fade-left" data-aos-once="true" data-aos-duration="3000"
-                    data-aos-delay="500">
-                    <img src="./images/background_img/left_cloud_bg.webp">
-                </div>
-                <div class="cloud-right" data-aos="fade-right" data-aos-once="true" data-aos-duration="3000"
-                    data-aos-delay="500">
-                    <img src="./images/background_img/right_cloud_bg.webp">
-                </div>
-                <div class="about-us-scroll-img">
-                    <img src="./images/background_img/logo_black.webp">
-                </div>
             </div>
+            <picture class="cloud-left" data-aos="fade-left" data-aos-once="true" data-aos-duration="3000"
+                data-aos-delay="500" data-aos-offset="600">
+                <img src="./images/background_img/left_cloud_bg.webp">
+            </picture>
+            <picture class="cloud-right" data-aos="fade-right" data-aos-once="true" data-aos-duration="3000"
+                data-aos-delay="500" data-aos-offset="600">
+                <img src="./images/background_img/right_cloud_bg.webp">
+            </picture>
+            <picture class="about-us-scroll-img">
+                <img src="./images/background_img/logo_black.webp">
+            </picture>
         </section>
 
         <!-- 佑 社群回饋 -->
